core/errors/src/main/java/com/example/errors/BaseNetworkException.kt
package com.example.errors

open class BaseNetworkException : Exception()
